--- a/templates/socialaccount/login.html
+++ b/templates/socialaccount/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Redirecting…</title>
-    {% provider_login_url provider.id process=process scope=scope auth_params=auth_params as provider_url %}
+    {% provider_login_url provider.id as provider_url %}
     <meta http-equiv="refresh" content="0; url={{ provider_url }}">
 </head>
 <body>
